--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Example of Web</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body>
+{% include 'partials/head.html' %}
     {% include 'navbar.html' %}
 
     <!-- main container -->
     <div class="container mx-auto mt-10 px-4 max-w-screen-xl">
 
-      <!-- grids -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-6">
+        <!-- main content will be unloaded into here -->
+        {% block content %}
+            <!-- content -->
+        {% endblock %}
 
-          {% include 'carousel_items.html' %}
-
-      </div> <!-- grid end -->
-
-      {% include 'footer.html' %}
+        <!-- footer  -->
+        {% include 'footer.html' %}
 
     </div> <!-- main container end -->
 
 
-</body>
-</html>
+{% include 'partials/end.html' %}
