--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -2,11 +2,15 @@
 
 
 {% block content %}
+    <div class="bg-gray-300 text-white text-lg container my-3 mx-auto rounded rounded-lg p-3 text-center">
+        <h1 class="text-3xl">About Me</h1>
+        <p>My name is Neil Mckenna, Edinburgh native and I am currently studying as a computing student at Edinburgh Napier</p>
+        <p>Recently turned 40, and I am creating this Game Review Website and part of an assignment.</p>
+        <p>I have a passion and interest in Video Game, playing , creation, design. I love it all.</p>
+        <p>This is kind of a pet project in a way.</p>
+        <p>Hopefully this is a example of my website understanding and creation and showcase</p>
 
-    <h1>About Me</h1>
-    <p>My name is Neil Mckenna, Edinburgh native and I am currently studying as a computing student at Edinburgh Napier</p>
-    <p>Recently turned 40, and I am creating this Game Review Website and part of an assignment.</p>
-    <p>I have a passion and interest in Video Game, playing , creation, design. I love it all.</p>
-    <p>This is kind of a pet project in a way.</p>
+    </div>
+
 
 {% endblock %}
