--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
     {% include 'navbar.html' %}
 
     <!-- main container -->
-    <div class="container mx-auto mt-10 px-4 max-w-screen-xl">
+    <div class="container mx-auto mt-10 mb-5 px-4 sm:px-6 md:px-8 lg:px-12 xl:px-16 max-w-screen-xl">
 
         <!-- main content will be unloaded into here -->
         {% block content %}
