--- a/templates/carousel_items.html
+++ b/templates/carousel_items.html
@@ -41,7 +41,9 @@
         <p class="text-gray-700 mb-4">{{ game.review_extract }}</p>
 
         <!-- Read More Link -->
-        <a href="{{ game.link }}" class="text-blue-500 hover:underline">Read More</a>
+        <a href="{{ url_for('individual_review', id=game.id) }}" class="text-blue-500 hover:underline">
+          Read More
+        </a>
       </div>
     {% endfor %}
   </div>
