--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -6,4 +6,4 @@
     <title>Example of Web</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-100">
