--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,24 +2,25 @@
   <footer class="bg-gray-800 text-white py-8 mt-0 rounded-xl">
     <div class="container mx-auto px-4">
       <!-- Grid Layout for Footer Items -->
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 items-start p-3">
+
 
         <!-- Navigation Links -->
-        <div>
-          <h5 class="font-bold mb-4 text-3xl"><em>Navigation</em></h5>
+        <div class="">
+          <h5 class="font-bold mb-4 text-2xl"><em>Navigation</em></h5>
           <ul>
             <li><li><a href="{{ url_for('home') }}" class="hover:text-gray-400 hover:underline">Home</a></li></li>
-            <li><a href="#" class="hover:underline" class="hover:text-gray-400 hover:underline">Latest</a></li>
-            <li><a href="#" class="hover:underline" class="hover:text-gray-400 hover:underline">Top 10</a></li>
-            <li><a href="#" class="hover:underline" class="hover:text-gray-400 hover:underline">All Reviews</a></li>
+            <li><a href="#" class="hover:text-gray-400 hover:underline">Latest</a></li>
+            <li><a href="#" class="hover:text-gray-400 hover:underline">Top 10</a></li>
+            <li><a href="#" class="hover:text-gray-400 hover:underline">All Reviews</a></li>
             <li><li><a href="{{ url_for('about') }}" class="hover:text-gray-400 hover:underline">About</a></li></li>
           </ul>
         </div>
 
         <!-- Social Media Links -->
         <div>
-          <h5 class="font-bold mb-4 text-lg"><em>Follow Us</em></h5>
-          <ul class="flex space-x-4">
+          <h5 class="font-bold mb-4 text-2xl"><em>Follow Us</em></h5>
+          <ul class="">
             <li><a href="#" class="hover:underline">Facebook</a></li>
             <li><a href="#" class="hover:underline">Twitter</a></li>
             <li><a href="#" class="hover:underline">Instagram</a></li>
@@ -28,7 +29,7 @@
 
         <!-- Contact Information -->
         <div>
-          <h5 class="font-bold mb-4 text-lg"><em>Contact</em></h5>
+          <h5 class="font-bold mb-4 text-2xl"><em>Contact</em></h5>
           <p>Email: <a href="mailto:info@example.com" class="hover:underline">info@neilsreviews.com</a></p>
           <p>Phone: <a href="tel:+123456789" class="hover:underline">+44 (0)131 258 3925</a></p>
         </div>
