--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,19 @@
     <br>
     <p class="text-2xl text-center text-gray-700">Please Check Out the Game Reviews Below in the below cards</p>
 
+    <!-- Flash Messages -->
+    <div class="my-2 p-2">
+        {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              <div class="p-4 mb-4 text-white bg-{{ 'green-500' if category == 'success' else 'red-500' }} rounded">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+    </div>
+
     <!-- carousel -->
     {% include 'carousel_items.html' %}
 
